--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,3 @@
-# netlify.toml
 [build]
   command = "npm run build"
   publish = "build"
@@ -6,9 +5,8 @@
 [functions]
   directory = "netlify/functions"
 
-# optional: allow your function to be called from your site
-[[headers]]
-  for = "/*"
-  [headers.values]
-    Access-Control-Allow-Origin = "*"
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
 
